<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/toBooksTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv1"
        android:textColor="@color/blackColor"
        android:textSize="35sp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <Button
        android:id="@+id/toBooksBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_Books"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toBooksTv"
        />

    <TextView
        android:id="@+id/toMusicTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musicTv"
        android:textColor="@color/blackColor"
        android:layout_marginTop="60dp"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toBooksBtn"
        />

    <Button
        android:id="@+id/toMusicBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_music"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toMusicTv"
        />

</androidx.constraintlayout.widget.ConstraintLayout>