<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor">

    <ImageView
        android:id="@+id/book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/full_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_photo_size_select_actual_black_24dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/blackColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book" />

    <TextView
        android:id="@+id/full_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/seekBar"
        android:text="@string/full_time"
        android:paddingRight="10dp"/>

    <TextView
        android:id="@+id/current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/seekBar"
        android:text="@string/current_time"
        android:paddingLeft="10dp"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backColor"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@id/down_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/down_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:gravity="center_horizontal"
        android:paddingTop="48dp"
        android:paddingBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_fast_rewind_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_play_circle_filled_black_24dp"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_pause_circle_filled_black_24dp"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_fast_forward_black_24dp"
            app:layout_constraintStart_toEndOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
